--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@ fastapi>=0.111
 uvicorn>=0.29
 pydantic>=2.7
 pydantic-settings>=2.2
-httpx>=0.27
+httpx[http2]>=0.27
 sqlalchemy>=2.0
 psycopg[binary]>=3.1
 requests>=2.32
